--- a/index-4.html
+++ b/index-4.html
@@ -94,7 +94,7 @@
         </article>
         <article class="span8">
             <h3>get in touch</h3>
-            <form id="contact-form" name="contact-form"  method="post" <!--target="_blank"--> action="bat/SendMail.asp">
+            <form id="contact-form" name="contact-form"  method="post" action="bat/SendMail.asp">
                 <div class="success"> Contact form submitted! <strong>We will be in touch soon.</strong> </div>
                 <fieldset>
                     <div>
