--- a/index-4.html
+++ b/index-4.html
@@ -83,13 +83,10 @@
         <article class="span4">
             <h3 class="menuItemContact1">find us</h3>
             <div class="info">
-                <p class="margBot6">Address: Ali Nihat Tarlan Caddesi Degirmen Yolu Sokak,<br>Sefer Demirel Is Merkezi No: 10 Kat: 1 <br>Zipcode: 34744  <br>Town-City: Bostanci-Istanbul <br>Country: Turkey  </p>
-                <p><em>Telephone 1:</em>+90 212 314 30 74</p>
-                <p><em>Telephone 2:</em>+90 212 314 30 67</p>
-                <p><em>GSM 1:</em>+90 532 556 70 35</p>
-                <p><em>GSM 1:</em>+90 532 524 62 49</p>
-                <p><em>FAX:</em>+90 216 385 33 96</p>
-                <p><em>E-mail:</em><a href="mailto:support@ray-bs.com">support@ray-bs.com</a></p>                                                                            
+                <p class="margBot6">Address: Kısıklı Cad. No: 28/1 <br>Town-City: Altunizade-Uskudar-Istanbul <br>Country: Turkey  </p>
+                <p><em>Telephone</em>+90 216 266 34 72</p>
+                <p><em>GSM</em>+90 532 556 70 35</p>
+                <p><em>FAX:</em>+90 216 266 34 01</p>                                                                           
             </div>
         </article>
         <article class="span8">
