--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ $(window).load(function() {
                 </div>
             </section>
             <section class="span12">
-                <p><span>Ray Business Solutions Inc.</span>&copy; 2003 | <a href="index-5.html">Privacy Policy</a></p>
+                <p><span>Ray Business Solutions Inc.</span>&copy; 2003</p>
             </section>
         </div>
         <!-- {%FOOTER_LINK} -->
