--- a/index-4.html
+++ b/index-4.html
@@ -76,8 +76,8 @@
         <article class="span12">
             <figure class="map">
                 <iframe width="225" height="150" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-                    src="//maps.google.com/maps?f=q&amp;source=s_q&amp;hl=tr&amp;geocode=&amp;q=Sefer+Demirel+%C4%B0%C5%9F+Merkez,+Istanbul,+T%C3%BCrkiye&amp;aq=0&amp;oq=sefer+demir&amp;sll=37.0625,-95.677068&amp;sspn=35.136115,86.572266&amp;ie=UTF8&amp;hq=Sefer+Demirel+%C4%B0%C5%9F+Merkez,&amp;hnear=Istanbul,+T%C3%BCrkiye&amp;t=m&amp;ll=40.965447,29.107418&amp;spn=0.002025,0.009656&amp;z=17&amp;output=embed"></iframe><br /><small>
-                    <a href="//maps.google.com/maps?f=q&amp;source=s_q&amp;hl=tr&amp;geocode=&amp;q=Sefer+Demirel+%C4%B0%C5%9F+Merkez,+Istanbul,+T%C3%BCrkiye&amp;aq=0&amp;oq=sefer+demir&amp;sll=37.0625,-95.677068&amp;sspn=35.136115,86.572266&amp;ie=UTF8&amp;hq=Sefer+Demirel+%C4%B0%C5%9F+Merkez,&amp;hnear=Istanbul,+T%C3%BCrkiye&amp;t=m&amp;ll=40.965447,29.107418&amp;spn=0.002025,0.009656&amp;z=17&amp;output=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+                    src="//maps.google.com/maps?q=K%C4%B1s%C4%B1kl%C4%B1%20caddesi%20No:28/1%20Altunizade&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe><br /><small>
+                    <a href="//maps.google.com/maps?q=K%C4%B1s%C4%B1kl%C4%B1%20caddesi%20No:28/1%20Altunizade&t=&z=13&ie=UTF8&iwloc=&output=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
             </figure>
         </article>
         <article class="span4">
